# cs470

./: .gitignore  .gitmodules  Cargo.toml  README.md  draw_timings.py  pip_reqs.txt  test.sh
batch/: cmd_args.rs  main.rs  scenario.rs
docs/: on_server.md  st.md
prompts/: 1.txt  2.txt  3.txt  4.txt
prompts/cnndm/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+9 more)
prompts/ende/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  (+36 more)
scenarios/: adaptive-ft5-cnndm.json  adaptive-t5-cnndm.json  adaptive-t5-ende.json  base.json  baseline-ende-difgamma.json  baseline-ft5-cnndm-base.json  baseline-ft5-cnndm-difgamma.json  baseline-ft5-cnndm-large.json  baseline-ft5-cnndm-small.json  baseline-t5-cnndm-base.json  baseline-t5-cnndm-difgamma.json  baseline-t5-cnndm-large.json  baseline-t5-cnndm-small.json  baseline-t5-ende-base.json  baseline-t5-ende-large.json  baseline-t5-ende-small.json  early-ft5-cnndm.json  early-t5-cnndm.json  early-t5-ende.json  filter.json  lenience-ft5-cnndm.json  lenience-t5-cnndm.json  lenience-t5-ende.json  sparse-ft5-cnndm.json  sparse-t5-cnndm.json  sparse-t5-ende.json
src/: cmd_args.rs  lib.rs  main.rs  t5_model.rs  tasks.rs
suggests/: material_phase.txt  material_science.txt  ml.txt  ptsd.txt  quantum_physics.txt  star_life.txt  whale.txt
tests/: t5.rs
(+20 files in other folders)
