[package]
name = "cs470"
version = "1.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0", features = ["cuda"] }
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
crossbeam-epoch = "0.9.18"
csv = "1.3.0"
env_logger = "0.11.3"
hf-hub = { version = "0.3.2", features = ["tokio"] }
indicatif = "0.17.8"
log = { version = "0.4.21", features = ["max_level_debug", "release_max_level_info"] }
rand = "0.8.5"
serde = "1.0.202"
serde_json = "1.0.117"
serde_plain = "1.0.2"
tokenizers = "0.19.1"
tracing = "0.1.40"

[[bin]]
name = "cs470-batch"
path = "batch/main.rs"
